[package]
name = "voxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.28"
log = "0.4.20"
log4rs = {version = "1.2.0", features = ["console_appender"]}
rand = "0.8.5"
regex = "1.10.2"
rust-raknet = "0.12.0"
tokio = "1.32.0"
